...
            )
        )
    } else {
        listOf(
            Triple(
                PrayerNotificationMode.ADZAN,
                "Suara Adzan (Alarm)",
                "Lantunan adzan lengkap & notifikasi waktu sholat"
            ),
            Triple(
                PrayerNotificationMode.PUSH_NOTIFICATION,
                "Push Notifikasi",
                "Notifikasi layar standar dengan nada dering perangkat"
...
