...
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 20.dp)
                .padding(bottom = 32.dp)
        ) {
            Text(
                text = "Pilih Suara Adzan",
                fontSize = 20.sp,
                fontWeight = FontWeight.Bold,
                color = if (isDark) PutihBersih else Color(0xFF2D2A26),
                textAlign = TextAlign.Center,
                modifier = Modifier
                    .fillMaxWidth()
...
